--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^24.2.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.2",
